# LLM-Rewriter

./: README.md  pyproject.toml  requirements.txt  setup.py
rew/: __init__.py  __main__.py
